# RealTimeParticleBasedSnowSimulation

./: .gitignore  CMakeLists.txt  README.md
presentations/: milestone2.pptx
snow_math/snow_math/: SimulationDriver.h  SnowSimSystem.h  particle.h  snow_math.cpp
src/: Particle.h  cell.h  kernel.cu  kernel.h  main.cpp  main.h  pointsgenerator.h  utilityCore.hpp  utils.h  vert.spv  vertex.h  vulkanpointsrenderer.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanspheresrenderer.h
src/shaders/: comp.spv  compile.bat  computePipeline1.comp  computePipeline2.comp  computeShader2.spv  fillCellVertexInfo.comp  fillCellVertexInfo.spv  findStartEnd.comp  findStartEnd.spv  frag.spv  physicsCompute.comp  physicsCompute.spv  resetCellVertexInfo.comp  resetCellVertexInfo.spv  shader.comp  shader.frag  shader.vert  sorting.comp  sorting.spv  sphereVertexCompute.comp  sphereVertexCompute.spv  vert.spv
